AB#27996: Fix button alignment

--- a/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Pages/GrantApplications/Index.css
+++ b/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Pages/GrantApplications/Index.css
@@ -144,11 +144,11 @@ table.dataTable tbody tr {
 }
 
 .action-bar-date-controls #app_custom_buttons {
-    margin-top: 10px;
+    margin-top: 0;
 }
 
 .action-bar-date-controls #dynamicButtonContainerId {
-    margin-top: 10px;
+    margin-top: 0;
 }
 
 /**end**/
